--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<header id="header">
 				<img src="images/STAKlogo.png" alt="Italian Trulli">
 				<!-- <h1></h1>-->
-				<p>Consultoría y Servicios Profesionales.<br />
-				Simple: Nos encargamos de todas tus necesidades informáticas.</p>
+				<p>Consultoría y Servicios Profesionales<br />
+				Infraestructura / Cloud / Infosec</p>
 			</header>
 
 		<!-- Footer -->
